#193 Remove google summer icon and fix width of scrollbar as acc to figma

--- a/webapp/styles/main.less
+++ b/webapp/styles/main.less
@@ -107,7 +107,7 @@ body {
     border-radius: @panelradius;
   }
   &::-webkit-scrollbar {
-    width: 4px;
+    width: 3px;
   }
 }
 
